# libmorton

./: wasm.sh
include/libmorton/: morton2D.h  morton_BMI.h  morton_common.h
test/: CMakeLists.txt  libmorton_test.cpp  libmorton_test.h  test2D_correctness.h
